fix import doc to spacing margin & padding

--- a/src/web/views/Guidelines/Spacing/Padding/_Padding.scss
+++ b/src/web/views/Guidelines/Spacing/Padding/_Padding.scss
@@ -21,7 +21,7 @@
       }
     }
   }
-  .d-flex {
+  .flex {
     & > div {
       flex: 1;
     }
